Add dynamodb config

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,7 @@ plugins:
   - serverless-python-requirements
   - serverless-wsgi
   - serverless-domain-manager
+  - serverless-dynamodb-local
 custom:
   wsgi:
     app: app.app
@@ -28,10 +29,36 @@ provider:
       Action:
         - "ses:SendEmail"
       Resource: "*"
+    - Effect: Allow
+      Action:
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:we-west-1:*:*"
 functions:
   app:
     handler: wsgi.handler
     events:
       - http: ANY /
       - http: ANY /thankyou
+      - http: ANY /listing
       - http: 'ANY {proxy+}'
+resources:  # CloudFormation template syntax
+  Resources:
+    usersTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: suggestions
+        AttributeDefinitions:
+          - AttributeName: Title
+            AttributeType: S
+        KeySchema:
+          - AttributeName: Title
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
